Replace List.of() with Collections.emptyList() in McpClientFeatures.java
Co-Authored-By: 于泽棋 <finyu@webank.com>